--- a/src/static/icons/iconfont.css
+++ b/src/static/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3885819 */
-  src: url('iconfont.woff2?t=1676012858904') format('woff2'),
-       url('iconfont.woff?t=1676012858904') format('woff'),
-       url('iconfont.ttf?t=1676012858904') format('truetype');
+  src: url('iconfont.woff2?t=1676283778493') format('woff2'),
+       url('iconfont.woff?t=1676283778493') format('woff'),
+       url('iconfont.ttf?t=1676283778493') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-guanbi1:before {
+  content: "\eaf2";
 }
 
 .icon-huo:before {
