--- a/src/public/css/animation.scss
+++ b/src/public/css/animation.scss
@@ -1,24 +1,8 @@
 // 隐藏、关闭动画，模糊放大效果
 .puff-out-center {
-  -webkit-animation: puff-out-center 1s cubic-bezier(0.165, 0.84, 0.44, 1) both;
   animation: puff-out-center 1s cubic-bezier(0.165, 0.84, 0.44, 1) both;
 }
-@-webkit-keyframes puff-out-center {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-filter: blur(0px);
-    filter: blur(0px);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scale(1.5);
-    transform: scale(1.5);
-    -webkit-filter: blur(4px);
-    filter: blur(4px);
-    opacity: 0;
-  }
-}
+
 @keyframes puff-out-center {
   0% {
     -webkit-transform: scale(1);
@@ -38,16 +22,7 @@
 
 // 隐藏、关闭动画
 .fade-out {
-  -webkit-animation: fade-out 1s ease-out both;
   animation: fade-out 1s ease-out both;
-}
-@-webkit-keyframes fade-out {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
 }
 @keyframes fade-out {
   0% {
@@ -60,31 +35,62 @@
 
 // center弹窗打开效果
 .scale-in-center {
-  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-    both;
   animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
-@-webkit-keyframes scale-in-center {
-  0% {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    opacity: 1;
-  }
 }
 @keyframes scale-in-center {
   0% {
     -webkit-transform: scale(0);
-    transform: scale(0);
+    transform: translate(-50%, -50%) scale(0);
     opacity: 1;
   }
   100% {
     -webkit-transform: scale(1);
-    transform: scale(1);
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+}
+// left弹窗打开效果
+.scale-in-left {
+  animation: scale-in-hor-left 0.5s linear both;
+}
+
+@keyframes scale-in-hor-left {
+  0% {
+    transform: translateX(-100%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+// right弹窗打开效果
+.scale-in-right {
+  animation: scale-in-hor-right 0.5s linear both;
+}
+@keyframes scale-in-hor-right {
+  0% {
+    transform: translateX(100%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+// bottom弹窗打开效果
+.scale-in-bottom {
+  animation: scale-in-ver-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+@keyframes scale-in-ver-bottom {
+  0% {
+    transform: scaleY(0);
+    transform-origin: 0% 100%;
+    opacity: 1;
+  }
+  100% {
+    transform: scaleY(1);
+    transform-origin: 0% 100%;
     opacity: 1;
   }
 }
