--- a/src/static/icons/iconfont.css
+++ b/src/static/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3885819 */
-  src: url('iconfont.woff2?t=1676431279245') format('woff2'),
-       url('iconfont.woff?t=1676431279245') format('woff'),
-       url('iconfont.ttf?t=1676431279245') format('truetype');
+  src: url('iconfont.woff2?t=1676515124487') format('woff2'),
+       url('iconfont.woff?t=1676515124487') format('woff'),
+       url('iconfont.ttf?t=1676515124487') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,26 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-xiazai-xianxing:before {
+  content: "\e60d";
+}
+
+.icon-pinglun:before {
+  content: "\e745";
+}
+
+.icon-peoples:before {
+  content: "\e619";
+}
+
+.icon-more:before {
+  content: "\e600";
+}
+
+.icon-fenxiang1:before {
+  content: "\e799";
 }
 
 .icon-youjiantou:before {
